2010-01-11  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Updated help
	
	* src/html/src/help/configure_credentials.htm4,
	src/html/src/help/configure_escalators.html4,
	src/html/src/help/configure_targets.htm4: Updated with "details"
	section.

	* src/html/src/omp.xsl: Link from pages to new help texts.

2010-01-11  Matthew Mundell <matthew.mundell@intevation.de>

	* src/html/src/omp.xsl (result) [detailed]: Add NVT name.

2010-01-11  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Updating help.

	* src/html/src/help/tasks.htm4: Added section on auto-refresh.

	* src/html/src/help/contents.htm4: Added more link.
	Ordered according to user interface.

	* src/html/src/help/configure_scanconfigs.htm4: Fixed links.

	* src/html/src/help/scanconfig_editor.htm4: New.

	* src/html/src/help/configure_escalators.htm4: Added section
	on test escalator.

2010-01-09  Matthew Mundell <matthew.mundell@intevation.de>

	* src/html/src/gsa-style.css (small_inline_form): New style.

	* src/html/src/omp.xsl (html-task-table): Neaten indentation.  Put the
	form inside a small_inline_form div.  Remove the font-size and display
	styles from the form and select.
	(html-create-escalator-form): Alternate background colours of rows.
	(create_config_response): Only print details if a config was created and
	there's a config/name in the response.

	* src/html/src/help/reports.htm4: Correct phrase.

2010-01-09  Matthew Mundell <matthew.mundell@intevation.de>

	* src/html/src/omp.xsl (get_system_reports): Add failure message.

2010-01-08  Matthew Mundell <matthew.mundell@intevation.de>

	* src/html/src/help/performance.htm4: New file.

2010-01-08  Matthew Mundell <matthew.mundell@intevation.de>

	* src/gsad_omp.c (create_lsc_credential_omp): Add check for password
	validation failure.

	* src/gsad.c (init_validator): Add rule "lsc_password".
	(exec_omp_post): Verify create_lsc_credential_omp password with
	"lsc_password".
