@@ -1,7 +1,11 @@
+2010-01-11  Matthew Mundell <matthew.mundell@intevation.de>
+
+	* src/gsad.c (request_handler): Pass gsize to get_system_report_omp.
+
 2010-01-11  Felix Wolfsteller <felix.wolfsteller@intevation.de>
 
 	Updated help
-	
+
 	* src/html/src/help/configure_credentials.htm4,
 	src/html/src/help/configure_escalators.html4,
 	src/html/src/help/configure_targets.htm4: Updated with "details"
